# BIT_door_description

./: CMakeLists.txt  package.xml
convex/bit_door/: door-ch.txt  foo.txt  handle-ch.txt
module/: alias.in.yaml
mujoco/: bit_door.urdf  bit_door.xml  bit_door.yaml
urdf/: bit_door.urdf
