<package>
  <name>bit_door_description</name>
  <version>1.0.0</version>
  <description>Description package for bit_door_description robots</description>
  <author>Fix Me</author>
  <maintainer email="fixme@to.do">Fix Me</maintainer>
  <license>BSD</license>
  <url>https://fixme.to.do</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>


